# tuya-iotos-android-ipc-demo-for-mutiple

./: README.md
ipc_demo/: local.properties
ipc_demo/app/: build.gradle
ipc_demo/app/src/main/: AndroidManifest.xml
ipc_demo/app/src/main/java/com/tuya/ai/ipcsdkdemo/: BootBroadCastRevicer.java  LocalDataBean.java  MainActivity.java
ipc_demo/app/src/main/java/com/tuya/ai/ipcsdkdemo/video/: H264Encoder.java  VideoCapture.java
launcher/: build.gradle  settings.gradle
launcher/app/: build.gradle
launcher/app/src/main/: AndroidManifest.xml
launcher/app/src/main/java/com/tuya/myapplication/: DeviceListBroadCast.java  HeartBean.kt  HeartManager.kt  MainActivity.java  ReAddBroadCast.java  ResetBroadCast.java
launcher/app/src/main/res/layout/: activity_main.xml
launcher/gradle/wrapper/: gradle-wrapper.properties
launcher/lowpower/: CMakeLists.txt  build.gradle
launcher/lowpower/src/main/: AndroidManifest.xml
launcher/lowpower/src/main/cpp/: native-lib.cpp  native_debug.h  tuya_ipc_low_power_api.h  tuya_lowpower_alive.h
launcher/lowpower/src/main/java/com/tuya/lowpower/: LowpowerManager.kt  ServiceS.java
launcher/lowpower/src/test/java/com/tuya/lowpower/: ExampleUnitTest.java
